--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,8 +6,8 @@ name: octo-train
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
-image-version: 42 # latest is also supported if you want new updates ASAP
+base-image: quay.io/fedora-ostree-desktops/sway-atomic
+image-version: 43 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -16,15 +16,20 @@ modules:
     files:
       - source: system
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
+  - type: akmods
+    base: bazzite
+    install:
+      - nvidia-open
+    nvidia-driver: nvidia-open
 
   - type: dnf
-    repos:
-      copr:
-        - atim/starship
+    #repos:
+    #  copr:
+    #    - atim/starship
     install:
       packages:
         - micro
-        - starship
+    #    - starship
     remove:
       packages:
         # example: removing firefox (in favor of the flatpak)
@@ -41,5 +46,9 @@ modules:
           - org.mozilla.firefox
           - org.gnome.Loupe
       - scope: user # Also add Flathub user repo, but no user packages
+  
+  - type: brew
+    nofile-limits: true
+    brew-analytics: true
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
