--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,8 +6,8 @@ name: octo-train
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: quay.io/fedora-ostree-desktops/sway-atomic
-image-version: 43 # latest is also supported if you want new updates ASAP
+base-image: ghcr.io/wayblueorg/sway-nvidia-open
+image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -16,19 +16,19 @@ modules:
     files:
       - source: system
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
-  - type: akmods
-    base: bazzite
-    install:
-      - nvidia-open
-    nvidia-driver: nvidia-open
+  #- type: akmods
+    #base: bazzite
+    #install:
+    #  - nvidia-open
+    #nvidia-driver: nvidia-open
 
   - type: dnf
     #repos:
     #  copr:
     #    - atim/starship
-    install:
-      packages:
-        - micro
+    #install:
+    #  packages:
+    #    - micro
     #    - starship
     remove:
       packages:
