--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,7 +6,8 @@ name: octo-train
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/wayblueorg/sway-nvidia-open
+#base-image: ghcr.io/wayblueorg/sway-nvidia-open
+base-image: quay.io/fedora-ostree-desktops/sway-atomic
 image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
@@ -16,11 +17,11 @@ modules:
     files:
       - source: system
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
-  #- type: akmods
+  - type: akmods
     #base: bazzite
-    #install:
-    #  - nvidia-open
-    #nvidia-driver: nvidia-open
+    install:
+      - nvidia-open
+    nvidia-driver: nvidia-open
   - type: dnf
     repos:
       nonfree: negativo17
