--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -8,7 +8,8 @@ description: This is my personal OS image.
 # the base image to build on top of (FROM) and the version tag to use
 #base-image: ghcr.io/wayblueorg/sway-nvidia-open
 base-image: quay.io/fedora-ostree-desktops/sway-atomic
-image-version: latest # latest is also supported if you want new updates ASAP
+#image-version: latest # latest is also supported if you want new updates ASAP
+image-version: 43
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
