--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -20,8 +20,9 @@ modules:
         destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
   - type: akmods
     #base: bazzite
+    base: main
     install:
-      - nvidia-open
+      - nvidia
     nvidia-driver: nvidia-open
   - type: dnf
     repos:
