--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,10 +6,8 @@ name: octo-train
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-#base-image: ghcr.io/wayblueorg/sway-nvidia-open
-base-image: quay.io/fedora-ostree-desktops/sway-atomic
-#image-version: latest # latest is also supported if you want new updates ASAP
-image-version: 43
+base-image: ghcr.io/wayblueorg/sway-nvidia-open
+image-version: latest # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
 # you can include multiple instances of the same module
@@ -27,34 +25,29 @@ modules:
       packages:
         - steam
         - kernel-modules-extra
-    #repos:
-    #  copr:
-    #    - atim/starship
-    #install:
-    #  packages:
-    #    - micro
-    #    - starship
     remove:
       packages:
         # example: removing firefox (in favor of the flatpak)
         # "firefox" is the main package, "firefox-langpacks" is a dependency
         - firefox
         - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
-  - type: akmods
-    #base: bazzite
-    base: main
-    nvidia-driver: nvidia-open
+  - type: dnf 
+    repos:
+      files:
+        - https://nvidia.github.io/libnvidia-container/stable/rpm/nvidia-container-toolkit.repo 
+      cleanup: true
     install:
-      - nvidia
-  - type: default-flatpaks
-    configurations:
-      - notify: true # Send notification after install/uninstall is finished (true/false)
-        scope: system
-        # If no repo information is specified, Flathub will be used by default
-        install: # system flatpaks we want all users to have and not remove
-          - org.mozilla.firefox
-          - org.gnome.Loupe
-      - scope: user # Also add Flathub user repo, but no user packages
+      packages:
+        nvidia-container-toolkit
+  #- type: default-flatpaks
+  #  configurations:
+  #    - notify: true # Send notification after install/uninstall is finished (true/false)
+  #      scope: system
+  #      # If no repo information is specified, Flathub will be used by default
+  #      install: # system flatpaks we want all users to have and not remove
+  #        - org.mozilla.firefox
+  #        - org.gnome.Loupe
+  #    - scope: user # Also add Flathub user repo, but no user packages
   
   - type: brew
     nofile-limits: true
