--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -26,6 +26,7 @@ modules:
         - steam
         - kernel-modules-extra
         - python3-i3ipc
+        - gammastep
     remove:
       packages:
         # example: removing firefox (in favor of the flatpak)
