--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -25,8 +25,6 @@ modules:
       packages:
         - steam
         - kernel-modules-extra
-        - python3-i3ipc
-        - gammastep
     remove:
       packages:
         # example: removing firefox (in favor of the flatpak)
@@ -34,11 +32,18 @@ modules:
         - firefox
         - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
         - vim
+  - type: dnf
+    install:
+      packages:
+        - python3-i3ipc
+        - gammastep
   # install autotiling script for sway
   - type: script 
     snippets:
       - "curl https://raw.githubusercontent.com/nwg-piotr/autotiling/refs/heads/master/autotiling/main.py > /usr/bin/autotiling"
       - "chmod +x /usr/bin/autotiling"
+  - type: akmods
+    base: bazzite
 
   #- type: default-flatpaks
   #  configurations:
