temp remove zerotier one

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,14 +6,14 @@ modules:
   - type: dnf
     repos:
       nonfree: negativo17
-      nonfree: rpmfusion
+      #nonfree: rpmfusion
       cleanup: true
     install:
       install-weak-deps: false
       packages:
         - steam
         - kernel-modules-extra
-        - zerotier-one
+        #- zerotier-one
     remove:
       packages:
         # example: removing firefox (in favor of the flatpak)
