* auto enable system76 systemd services

--- a/recipes/recipe-system76.yml
+++ b/recipes/recipe-system76.yml
@@ -24,3 +24,11 @@ modules:
         - system76-firmware
         - system76-power
         - firmware-manager
+  - type: systemd 
+    system: 
+      enabled:
+        - com.system76.PowerDaemon.service
+        - system76-power-wake
+        - system76-firmware-daemon.service
+      masked:
+        - power-profiles-daemon.service
