--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -7,6 +7,7 @@ modules:
   - type: dnf
     install:
       packages:
+        - zsh
         - python3-i3ipc
         - gammastep
         - udiskie
