* add gamescope to installed packages

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -12,6 +12,7 @@ modules:
         - gammastep
         - udiskie
         - river
+        - gamescope
     remove:
       packages:
         # example: removing firefox (in favor of the flatpak)
