--- a/recipes/recipe-common.yml
+++ b/recipes/recipe-common.yml
@@ -13,6 +13,7 @@ modules:
         - udiskie
         - gamescope
         - mangohud
+        - rclone
     remove:
       packages:
         # example: removing firefox (in favor of the flatpak)
