--- a/recipes/recipe-common.yml
+++ b/recipes/recipe-common.yml
@@ -28,19 +28,20 @@ modules:
   #    packages:
   #      - zerotier-one
 
-  #- type: dnf
-  #  repos:
-  #    cleanup: true # clean up added repos after module is done
-  #    files:
-  #      - https://brave-browser-rpm-release.s3.brave.com/brave-browser.repo
-  #    keys:
-  #      - https://brave-browser-rpm-release.s3.brave.com/brave-core.asc
-  #  install:
-  #    skip-unavailable: true # skip unavailable packages
-  #    packages:
-  #      - repo: brave-browser
-  #        packages:
-  #          - brave-browser 
+  - type: dnf
+    repos:
+      cleanup: true # clean up added repos after module is done
+      files:
+        - https://brave-browser-rpm-release.s3.brave.com/brave-browser.repo
+      keys:
+        - https://brave-browser-rpm-release.s3.brave.com/brave-core.asc
+    install:
+      skip-unavailable: true # skip unavailable packages
+      packages:
+        - repo: brave-browser
+          packages:
+            - brave-browser 
+        - liberation-fonts
   - type: dnf
     repos:
       nonfree: negativo17
