--- a/recipes/recipe-common.yml
+++ b/recipes/recipe-common.yml
@@ -88,5 +88,7 @@ modules:
   - type: brew
     nofile-limits: true
     brew-analytics: true
+    direct-pull: true
+    auto-upgrade: true
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
