--- a/recipes/recipe-main.yml
+++ b/recipes/recipe-main.yml
@@ -12,4 +12,4 @@ image-version: latest # latest is also supported if you want new updates ASAP
 # module configuration, executed in order
 # you can include multiple instances of the same module
 modules:
-  - from-file: recipe-common.yml 
+  - from-file: common.yml 
