Add brave install

--- a/recipes/common.yml
+++ b/recipes/common.yml
@@ -26,16 +26,20 @@ modules:
   #    #install-weak-deps: false
   #    packages:
   #      - zerotier-one
-
-  #- type: dnf
-  #  repos:
-  #    files:
-  #      - https://repo.vivaldi.com/stable/vivaldi-fedora.repo
-  #    keys:
-  #      - https://repo.vivaldi.com/stable/linux_signing_key.pub
-  #  install:
-  #    packages:
-  #      - vivaldi-stable 
+  - type: dnf
+    repos:
+      cleanup: true # clean up added repos after module is done
+      files:
+        - https://brave-browser-rpm-release.s3.brave.com/brave-browser.repo
+      keys:
+        - https://brave-browser-rpm-release.s3.brave.com/brave-core.asc
+    install:
+      skip-unavailable: true # skip unavailable packages
+      packages:
+        - repo: brave-browser
+          packages:
+            - brave-browser
+        - liberation-fonts
   - type: dnf
     repos:
       copr:
