add nautilus to fix pika backup issues

--- a/recipes/common.yml
+++ b/recipes/common.yml
@@ -22,6 +22,7 @@ modules:
         - mangohud
         - chromium
         - faugus-launcher
+        - nautilus
         - repo: brave-browser
           packages:
             - brave-browser
