--- a/recipes/common.yml
+++ b/recipes/common.yml
@@ -44,7 +44,7 @@ modules:
   - type: fonts
     fonts:
       nerd-fonts:
-        - SauceCodePro
+        - SourceCodePro
 
   - type: default-flatpaks
     configurations:
