* enable nvidia-cdi-refresh service on nvidia-open image

--- a/recipes/recipe-nvidia-open.yml
+++ b/recipes/recipe-nvidia-open.yml
@@ -21,3 +21,7 @@ modules:
     install:
       packages:
         - nvidia-container-toolkit
+  - type: systemd 
+    system: 
+      enabled:
+        - nvidia-cdi-refresh.service 
