--- a/recipes/common.yml
+++ b/recipes/common.yml
@@ -22,7 +22,9 @@ modules:
         - mangohud
         - chromium
         - faugus-launcher
-        - dolphin
+        - mpv
+        - libsixel
+        - dolphin # only installed because pika backup seems to only work with dolphin and nautilus
         - repo: brave-browser
           packages:
             - brave-browser
